server/compilers/goLiteJS/src/test/ml1/invalid/decl6.go
// no var keyword in declaration 
package main

x int = 4
